--- a/notebooks/EDA.ipynb
+++ b/notebooks/EDA.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "4c7f0f97",
    "metadata": {},
    "outputs": [],
@@ -29,7 +29,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(\"../data/BMW_Car_Sales_Classification.csv\")"
+    "df = pd.read_csv(\"BMW_Car_Sales_Classification.csv\")"
    ]
   },
   {
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "id": "e787da6d",
    "metadata": {},
    "outputs": [
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "id": "3a9135a9",
    "metadata": {},
    "outputs": [
@@ -98,7 +98,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "id": "a4d06242",
    "metadata": {},
    "outputs": [
@@ -222,13 +222,63 @@
        "max     2024.000000       5.000000  199996.000000  119998.000000   9999.000000"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "310b01cc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(df.select_dtypes(include='object').columns) - 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "95d1cadb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "count    50000.000000\n",
+       "mean         3.247180\n",
+       "std          1.009078\n",
+       "min          1.500000\n",
+       "25%          2.400000\n",
+       "50%          3.200000\n",
+       "75%          4.100000\n",
+       "max          5.000000\n",
+       "Name: Engine_Size_L, dtype: float64"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['Engine_Size_L'].describe()"
    ]
   },
   {
@@ -241,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 8,
    "id": "000cc5a5",
    "metadata": {},
    "outputs": [
@@ -263,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "9ffa18d7",
    "metadata": {},
    "outputs": [
@@ -285,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "9485697f",
    "metadata": {},
    "outputs": [
@@ -307,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 11,
    "id": "90c2ba54",
    "metadata": {},
    "outputs": [
@@ -329,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 12,
    "id": "f0a6009d",
    "metadata": {},
    "outputs": [
