--- a/notebooks/Preprocessing_train_test.ipynb
+++ b/notebooks/Preprocessing_train_test.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "268aa766",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "bd8d0416",
    "metadata": {},
    "outputs": [
@@ -151,7 +151,7 @@
        "4      122131      49898          3080                  Low  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "7369bdc8",
    "metadata": {},
    "outputs": [],
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "d2fe5d2d",
    "metadata": {},
    "outputs": [],
@@ -185,34 +185,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "10717b26",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0        1\n",
-       "1        0\n",
-       "2        0\n",
-       "3        0\n",
-       "4        0\n",
-       "        ..\n",
-       "49995    1\n",
-       "49996    1\n",
-       "49997    1\n",
-       "49998    1\n",
-       "49999    0\n",
-       "Name: Sales_Classification, Length: 50000, dtype: int64"
+       "array([1, 0, 0, ..., 1, 1, 0], shape=(50000,))"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "y"
+    "y.values"
    ]
   },
   {
